# db_war

./: CMakeLists.txt  README.md  army_view.sql  db_war_region.sql  db_war_region_data.sql  main.cpp  report_1.sql  report_10.sql  report_11.sql  report_12.sql  report_13.sql  report_2.sql  report_3.sql  report_4.sql  report_5.sql  report_6.sql  report_7.sql  report_8.sql  report_9.sql  trigger_10.sql  triggers_1.sql  triggers_2.sql  triggers_3.sql  triggers_4.sql  triggers_5.sql  triggers_6.sql  triggers_7.sql  triggers_8.sql  triggers_9.sql  under_army_view.sql  under_unit_view.sql  view_oficer_subdivisions.sql  view_platoons_squads.sql  view_trigger_10.sql  view_triggers_1.sql  view_triggers_10.sql  view_triggers_11.sql  view_triggers_12.sql  view_triggers_13.sql  view_triggers_14.sql  (+15 more)
app/: CMakeLists.txt  arrmywindow.cpp  arrmywindow.h  arrmywindow.ui  artillerieswindow.cpp  artillerieswindow.h  artillerieswindow.ui  assaultriflestablewindow.cpp  assaultriflestablewindow.h  assaultriflestablewindow.ui  brigadewindow.cpp  brigadewindow.h  brigadewindow.ui  captainswindow.cpp  captainswindow.h  captainswindow.ui  colonelswindow.cpp  colonelswindow.h  colonelswindow.ui  companywindow.cpp  companywindow.h  companywindow.ui  corporalswindow.cpp  corporalswindow.h  corporalswindow.ui  corpwindow.cpp  corpwindow.h  corpwindow.ui  divisionwindow.cpp  divisionwindow.h  divisionwindow.ui  ensignswindow.cpp  ensignswindow.h  ensignswindow.ui  generalswindow.cpp  generalswindow.h  generalswindow.ui  infantrycombatvehicleswindow.cpp  infantrycombatvehicleswindow.h  infantrycombatvehicleswindow.ui  (+67 more)
